# PracPlusPlus

./: README.md
FunctionLib/: .gitignore  CMakeLists.txt  main.cpp  setup.sh
FunctionLib/lib/: CMakeLists.txt  FunctionTests.cpp
FunctionLib/src/: CMakeLists.txt  Factory.h  Function.h
SimulatedAnnealing/: file.h  jobs.h  main.cpp  main.h  mutation.h  output.h  solution.h  temperature.h
SparceMatrixKit/: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  SparceMatrixKit  SparceMatrixKit_run  cmake_install.cmake  in.txt  main.cpp  vector.txt
SparceMatrixKit/doxygen/html/: Complex_8h_source.html  Matrix_8h_source.html  Other_8h_source.html  Rational_8h_source.html  Vector_8h_source.html  annotated.html  classComplex__number-members.html  classComplex__number.html  classMatrix-members.html  classMatrix.html  classMatrix__proxy-members.html  classMatrix__proxy.html  classRational__number-members.html  classRational__number.html  classVector-members.html  classVector.html  classes.html  dir_02360bd02ac1201056da1daa384a18e9.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_967f96849ec56911eec4db87a35fd18e.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  index.html  menudata.js  structMatrix__column__coord-members.html  structMatrix__column__coord.html  structMatrix__coords-members.html  structMatrix__coords.html  structMatrix__row__coord-members.html  structMatrix__row__coord.html  structStreamNumber-members.html  structStreamNumber.html
SparceMatrixKit/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  (+5 more)
SparceMatrixKit/input/: in_matrix_1  in_matrix_2  in_matrix_3  in_vector_1  in_vector_2
SparceMatrixKit/lib/: CMakeLists.txt  ComplexNumbersTests.cpp  Google_Tests_run  Makefile  MatrixTests.cpp  RationalNumbersTests.cpp  VectorTests.cpp
SparceMatrixKit/src/: CMakeLists.txt  Complex.h  Exceptions.h  Makefile  Matrix.h  NewMatrix.h  Other.cpp  Other.h  Rational.h  Vector.h  cmake_install.cmake
